[project]
name = "minju_args_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "minju210", email = "juliana6190210@gmail.com"},
]
dependencies = []
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution =true 

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"

[project.scripts]
my-hist = 'minju_args_history.cli:cmd'

[project.urls]
Homepage = "https://github.com/minju210/minju_args_history"
Issues = "https://github.com/minju210/minju_args_history/issues"
